# Time-Bandits

./: .gitignore  ALL_BUILD.vcxproj  Blank_Page.txt  CMakeLists.txt  ColourKey.md  Doxyfile  README.md  Time_Bandits.sln  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  action.h  actionListener.h  character.cpp  color.cpp  color.h  compileOnly.bat  fileMessagesToString.cpp  fileMessagesToString.h  fileToString.cpp  fileToString.h  gameEngine.cpp  gameEngine.sln  gameEngine.vcxproj  gameEngine.vcxproj.filters  mainMenu.background  mainMenu.color  mainMenu.txt  message.cpp  msbuild.yml  runGame.bat  shadyPines.text  test.color  test.cpp  test.txt  test_screen.txt  timer.cpp  timer.h
.github/workflows/: CMake.yml  CodacyCoverage.yml  CodacyCoverageTry2.yml  DoxygenMaker.yml
Backgrounds/mainMenu/: mainMenu.background  mainMenu.color  mainMenu.txt
Backgrounds/shadyPinesPark/: shadyPinesPark.background
Backgrounds/test/: sceneData.info  test.color
Classes/: Timer.cpp  _action.cpp  _actionHandler.cpp  _actionListener.cpp  _actionListener.hpp  _char.cpp  _char.hpp  _color.cpp  _inputKey.cpp  _message.cpp  _message.hpp  _scene.cpp  _scene.hpp  _sprite.cpp  _sprite.hpp  fileMessagesToString.cpp  fileToString.cpp  zBuffer.cpp
Time Bandits/: CMakeLists.txt  File.cpp  File.h  FileRetrival.cpp  FileRetrival.h  Time Bandits.cpp  Time Bandits.h  action.cpp  action.h  actionListener.cpp  actionListener.h  character.cpp  character.h  color.cpp  color.h  error.cpp  error.h  fileActionsToString.cpp  fileActionsToString.h  fileAssetsToString.cpp  fileAssetsToString.h  fileMessagesToString.cpp  fileMessagesToString.h  fileTextToString.cpp  fileTextToString.h  fileToString.cpp  fileToString.h  gameEngine.cpp  gameTools.cpp  gameTools.h  hello_test.cc  loadGame.cpp  loadGame.h  message.cpp  message.h  shadyPines.text
Time Bandits/Backgrounds/: cafe.background  farm.color  farm.txt  hourglassEdge.background  hourglassShattered.background  library.background  library.color  mainMenu2.background  mainMenu2.color  mainMenu3.background  mainMenu3.color  mainMenu4.background  mainMenu4.color  mainMenu5.background  mainMenu5.color  mainMenu6.background  mainMenu6.color  mainStreet.background  mainStreet.color  mainStreet.txt  map.color  mcdonalds.background  motel.background  motel.color  mysteryBarn.background  mysteryBarn.color  powerPlant.background  powerPlant.txt  roadToNew.background  test.background
Time Bandits/Game-Engine-Settings/: actionCombos.actions  actionList.actions  assets.actions  messageList.actions  settings.info
Time Bandits/Text-Messages/: 66Motel.text  barn.text  betsy.text  cafe.text  emeliz  emeliz.text  farm.text  holden.text  library.text  mainStreet.text  max.text  mcdonalds.text  motel.text  powerPlant.text  roadToNew.text  shadyPines.text  sky.text
UnitTesting/: UnitTesting.cpp  UnitTesting.vcxproj
UnitTesting/x64/Debug/: UnitTesting.dll.recipe  UnitTesting.ilk  vc143.idb
UnitTesting/x64/Debug/UnitTesting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnitTesting.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
Workflows/: cmakelists.txt  doxygen.yml  msbuild.yml
in progress classes/: _scene.cpp
x64/Debug/: UnitTesting.exp  UnitTesting.lib  gameEngine.exe.recipe  gameEngine.ilk  gameEngine.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/gameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  gameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
